--- a/js/app/package.json
+++ b/js/app/package.json
@@ -21,6 +21,18 @@
     "openai-streams": "^5.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "lucide-react": "^0.256.0",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@trivago/prettier-plugin-sort-imports": "4.1.0",
+    "eslint": "^8.26.0",
+    "class-variance-authority": "^0.6.1",
+    "eslint-config-prettier": "^8.5.0",
+    "next-themes": "^0.2.1",
+    "encoding": "^0.1.13",
+    "prettier": "^2.7.1",
     "swr": "^2.1.5",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
