fix lint and build errors

--- a/js/app/package.json
+++ b/js/app/package.json
@@ -7,40 +7,44 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/merriweather": "^5.0.3",
     "@fontsource/roboto": "^5.0.3",
     "@mui/material": "^5.13.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
+    "class-variance-authority": "^0.6.1",
+    "encoding": "^0.1.13",
     "inngest": "^2.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.256.0",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "openai": "^3.3.0",
     "openai-streams": "^5.20.0",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.256.0",
+    "swr": "^2.1.5",
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.6",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@trivago/prettier-plugin-sort-imports": "4.1.0",
-    "eslint": "^8.26.0",
-    "class-variance-authority": "^0.6.1",
-    "eslint-config-prettier": "^8.5.0",
-    "next-themes": "^0.2.1",
-    "encoding": "^0.1.13",
-    "prettier": "^2.7.1",
-    "swr": "^2.1.5",
     "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.198",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@types/uuid": "^9.0.3",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "13.4.10",
+    "eslint-config-prettier": "^8.5.0",
     "typescript": "^4.8.3"
   }
 }
