--- a/js/app/.eslintrc.json
+++ b/js/app/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["prettier"]
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    "react/no-unescaped-entities": "off"
+  }
 }
