--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload",
+    "next-dev": "next dev",
+    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
@@ -37,6 +39,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "concurrently": "^8.0.1",
     "@types/lodash": "^4.14.198",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
