--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
     "api/**": {
       "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
     }
-  }
+  },
+  "routes": [
+    {
+      "src": "/api/py/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
