--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/index.py": {
+    "api/**": {
       "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
     }
   },
