--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
   "scripts": {
+    "build": "next build",
+    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload --loop asyncio --timeout-keep-alive 60",
     "next-dev": "next dev",
-    "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
-    "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -13,11 +13,20 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/merriweather": "^5.0.3",
     "@fontsource/roboto": "^5.0.3",
-    "@mui/material": "^5.13.4",
+    "@hookform/resolvers": "^3.3.1",
+    "@mui/material": "^5.14.10",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@trivago/prettier-plugin-sort-imports": "4.1.0",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
+    "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.1",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
@@ -31,6 +40,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "replicate": "^0.18.0",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.13.2",
