--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "next build",
     "dev": "concurrently \"npm run next-dev\" \"npm run fastapi-dev\"",
     "fastapi-dev": "pip3 install -r requirements.txt && python3 -m uvicorn api.index:app --reload --loop asyncio --timeout-keep-alive 60",
+    "lint": "next lint",
     "next-dev": "next dev",
     "start": "next start",
     "type-check": "tsc"
